--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 col-md-12 col-xs-12 wow fadeInLeft" data-wow-delay="0.3s">
-          <iframe width="100%" height="100%c="https://www.youtube.com/embed/DDCVBDi_hnE">
+          <iframe width="100%" height="306c="https://www.youtube.com/embed/DDCVBDi_hnE">
           </iframe>
         </div>
         <div class="col-lg-6 col-md-12 col-xs-12 info wow fadeInRight" data-wow-delay="0.3s">
