--- a/index.html
+++ b/index.html
@@ -643,10 +643,10 @@
 
         <div class="col-lg-4 col-md-4 col-xs-12">
           <div class="social-icon text-left">
-            <a class="facebook" href="https://www.facebook.com/pradhanitservices"><i class="lni-facebook-filled"></i></a>
-            <a class="twitter" href="https://twitter.com/PradhanServices"><i class="lni-twitter-filled"></i></a>
-            <a class="instagram" href="https://www.instagram.com/pradhan_it_services/"><i class="lni-instagram-filled"></i></a>
-            <a class="linkedin" href="https://www.linkedin.com/company/pradhanitservices/"><i class="lni-linkedin-filled"></i></a>
+            <a class="facebook" href="https://www.facebook.com/pradhanitservices"><i class="lni-facebook-filled" alt="facebook"></i></a>
+            <a class="twitter" href="https://twitter.com/PradhanServices"><i class="lni-twitter-filled" alt="twitter"></i></a>
+            <a class="instagram" href="https://www.instagram.com/pradhan_it_services/"><i class="lni-instagram-filled" alt="instagram"></i></a>
+            <a class="linkedin" href="https://www.linkedin.com/company/pradhanitservices/"><i class="lni-linkedin-filled" alt="linkedin"></i></a>
             <a class="instagram" href="https://www.youtube.com/channel/UCwdk2s6WV3d-YQrGPK0ckRg"><img src="assets/img/testimonial/img.png"
                 alt="Youtube"></a>
           </div>
