--- a/index.html
+++ b/index.html
@@ -500,22 +500,22 @@
       <div class="row text-align-">
         <div class="col-lg-3 col-md-3 col-xs-12 wow fadeInUp" data-wow-delay="0.3s">
           <div class="client-item-wrapper">
-            <img class="img-fluid" src="assets/img/clients/img1.png" alt="">
+            <img class="img-fluid" src="assets/img/clients/img1.png" alt="shopify">
           </div>
         </div>
         <div class="col-lg-3 col-md-3 col-xs-12 wow fadeInUp" data-wow-delay="0.6s">
           <div class="client-item-wrapper">
-            <img class="img-fluid" src="assets/img/clients/img2.png" alt="">
+            <img class="img-fluid" src="assets/img/clients/img2.png" alt="asana">
           </div>
         </div>
         <div class="col-lg-3 col-md-3 col-xs-12 wow fadeInUp" data-wow-delay="0.9s">
           <div class="client-item-wrapper">
-            <img class="img-fluid" src="assets/img/clients/img3.png" alt="">
+            <img class="img-fluid" src="assets/img/clients/img3.png" alt="Phcorner">
           </div>
         </div>
         <div class="col-lg-3 col-md-3 col-xs-12 wow fadeInUp" data-wow-delay="1.2s">
           <div class="client-item-wrapper">
-            <img class="img-fluid" src="assets/img/clients/img4.png" alt="">
+            <img class="img-fluid" src="assets/img/clients/img4.png" alt="slack">
           </div>
         </div>
       </div>
