--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <title>Best Digital Marketing and Website Devlopment Agency in Patna </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="---">
+  <meta name="description" content="Pradhan iT Services are giving the best serivces of Digital Marketing, SEO, SMM, PPC, Content Marketing, Ecommerce Branding, Website Designing, Website Development in Patna, India. we have the supreme team  of IT solution.">
   <meta name="keywords" content="best digital marketing company in patna, seo company in patna, seo agency in patna, best seo company in india, best seo company in bihar, best seo company in patna, best content marketing company in patna, best social media marketing company in patna, digital marketing company in patna, digital marketing agency company in patna, digital marketing company in bihar, digital marketing company in india, social media marketing company in patna, best website development company in india, content marketing company in patna, content marketing agency in patna, best content marketing company in india, best content marketing company in bihar ,website development company in patna, website development agency in patna, social media marketing agency in patna, best social media marketing company in bihar, best social media marketing company in india, best ecommerce branding company in patna, best online advertisement company in patna, best website development company in patna, best website designing company in patna, ppc agency in patna, ppc company in patna, ppc agency in patna, ppc company in patna, best ecommerce branding company in bihar, best ecommerce branding company in india, ecommerce branding company in patna, ecommerce branding agency in patna, best website designing company in india, best website designing company in bihar, website designing company in patna, website designing agency in patna, online advertisement company in patna, online advertisement agency in patna, best online advertisement company in bihar, best online advertisement company in india">
   <meta name="robots" content="index, follow">
   <meta name="author" content="pradhanitservices.com">
   <meta name="distribution" content="global">
-  <meta property="og:title" ---" />
-  <meta property="og:description" content="---" />
+  <meta property="og:title"Best Digital Marketing and Website Devlopment Agency in Patna" />
+  <meta property="og:description" content="Pradhan iT Services are giving the best serivces of Digital Marketing, SEO, SMM, PPC, Content Marketing, Ecommerce Branding, Website Designing, Website Development in Patna, India. we have the supreme team  of IT solution." />
   <meta property="og:url" content="www.pradhanitservices.com" />
   <meta property="og:image" content="---" />
   <meta property="og:type" content="website" />
