--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="en_US" />
   <meta property="og:site_name" content="Pradhan iT Services" />
+  <link rel="icon" href="favicon.png" sizes="16x16" type="image/png">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
   <!-- Icon -->
