--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="en_US" />
   <meta property="og:site_name" content="Pradhan iT Services" />
-  <link rel="icon" href="favicon.png" sizes="16x16" type="image/png">
+   <!-- Favicon -->                                                          
+  <link rel="icon" href="assets/img/favicon.png" sizes="32x32" type="image/png">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
   <!-- Icon -->
