--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
   <link rel="stylesheet" href="assets/css/main.css">
   <!-- Responsive Style -->
   <link rel="stylesheet" href="assets/css/responsive.css">
+  <!-- Canonical -->
+  <link rel="canonical" href="https://www.pradhanitservices.com/">
 
   <!-- Global site tag - Google Search Console -->
   <meta name="google-site-verification" content="r8a8UUs9fJEF4e8xZJ5jNzn2JMAHftyXL3MiPsB2k-8" />
