--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
   <!-- Required meta tags -->
-  <title>Best Digital Marketing and Website Devlopment Agency in Patna </title>
+  <title>Best Digital Marketing and Website Development Agency in Patna </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Pradhan iT Services are giving the best serivces of Digital Marketing, SEO, SMM, PPC, Content Marketing, Ecommerce Branding, Website Designing, Website Development in Patna, India. we have the supreme team  of IT solution.">
@@ -12,7 +12,7 @@
   <meta name="robots" content="index, follow">
   <meta name="author" content="pradhanitservices.com">
   <meta name="distribution" content="global">
-  <meta property="og:title"Best Digital Marketing and Website Devlopment Agency in Patna" />
+  <meta property="og:title"Best Digital Marketing and Website Development Agency in Patna" />
   <meta property="og:description" content="Pradhan iT Services are giving the best serivces of Digital Marketing, SEO, SMM, PPC, Content Marketing, Ecommerce Branding, Website Designing, Website Development in Patna, India. we have the supreme team  of IT solution." />
   <meta property="og:url" content="www.pradhanitservices.com" />
   <meta property="og:image" content="https://pradhanitservices.files.wordpress.com/2021/02/page-header-bg.jpg" />
