--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <html>
-
+<html lang="en-US">
 <head>
   <!-- Required meta tags -->
   <title>Best Digital Marketing and Website Development Agency in Patna </title>
