--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta name="distribution" content="global">
   <meta property="og:title"Best Digital Marketing and Website Development Agency in Patna" />
   <meta property="og:description" content="Pradhan iT Services are giving the best serivces of Digital Marketing, SEO, SMM, PPC, Content Marketing, Ecommerce Branding, Website Designing, Website Development in Patna, India. we have the supreme team  of IT solution." />
-  <meta property="og:url" content="www.pradhanitservices.com" />
+  <meta property="og:url" content="https://pradhanitservices.com/" />
   <meta property="og:image" content="https://pradhanitservices.files.wordpress.com/2021/02/page-header-bg.jpg" />
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="en_US" />
