--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="en_US" />
   <meta property="og:site_name" content="Pradhan iT Services" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@PradhanServices" />
+  <meta name="twitter:title" content="Best Digital Marketing and Website Development Agency in Patna" />
+  <meta name="twitter:description" content="Pradhan iT Services are giving the best serivces of Digital Marketing, SEO, SMM, PPC, Content Marketing, Ecommerce Branding, Website Designing, Website Development in Patna, India. we have the supreme team  of IT solution." />
+  <meta name="twitter:image" content="https://pradhanitservices.files.wordpress.com/2021/02/page-header-bg.jpg" />
    <!-- Favicon -->                                                          
   <link rel="icon" href="assets/img/favicon.png" sizes="32x32" type="image/png">
   <!-- Bootstrap CSS -->
