--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 
 
+
 <!DOCTYPE html>
 <html>
 <html lang="en-US">
@@ -607,7 +608,7 @@
                 <div class="contact-icon">
                   <i class="lni-map-marker"></i>
                 </div>
-                <h6 style="color:#3B6182"><b>ADDRESS :-</b> 3rd floor, Anjir Niwas, Kumhrar, Patna, 800026</h6>
+                <p style="color:#3B6182"><b>ADDRESS :-</b> 3rd floor, Anjir Niwas, Kumhrar, Patna, 800026</p>
               </div>
               <div class="single-contact">
                 <div class="contact-icon">
