--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
 
     gtag('config', 'G-41HCLBFB94');
   </script>
+
+<script>(function(w, d) { w.CollectId = "60314eb3e9cf8d150b3ac536"; var h = d.head || d.getElementsByTagName("head")[0]; var s = d.createElement("script"); s.setAttribute("type", "text/javascript"); s.async=true; s.setAttribute("src", "https://collectcdn.com/launcher.js"); h.appendChild(s); })(window, document);</script>
 </head>
 
 <body>
