--- a/index.html
+++ b/index.html
@@ -108,6 +108,11 @@
                 Services
               </a>
             </li>
+	    <li class="nav-item">
+                <a class="nav-link" href="#testimonial">
+                  Testimonial
+               </a>
+             </li>
             <li class="nav-item">
               <a class="nav-link" href="#blog">
                 Blog
