added new field mobileno

--- a/index.html
+++ b/index.html
@@ -558,8 +558,15 @@
                 </div>
                 <div class="col-md-6">
                   <div class="form-group">
-                    <input type="text" placeholder="Email" id="email" class="form-control" name="_replyto" required
+                    <input type="text" placeholder="Mobile No" id="mobile" class="form-control" name="mobile" required
                       data-error="Please enter your email">
+                    <div class="help-block with-errors"></div>
+                  </div>
+                </div>
+                <div class="col-md-12">
+                  <div class="form-group">
+                    <input type="text" placeholder="Email" id="email" class="form-control" name="_replyto" required
+                      data-error="Please enter your Email">
                     <div class="help-block with-errors"></div>
                   </div>
                 </div>
