--- a/index.html
+++ b/index.html
@@ -606,19 +606,19 @@
                 <div class="contact-icon">
                   <i class="lni-map-marker"></i>
                 </div>
-                <p style="color:#3B6182"><b>ADDRESS :-</b> 3rd floor, Anjir Niwas, Kumhrar, Patna, 800026</p>
+                <p style="color:#3B6182"> 3rd floor, Anjir Niwas, Kumhrar, Patna, 800026</p>
               </div>
               <div class="single-contact">
                 <div class="contact-icon">
                   <i class="lni-envelope"></i>
                 </div>
-                <h6 style="color:#3B6182"><b>Email :-</b> <a href="mailto:info@pradhanitservices.com">info@pradhanitservices.com</a></h6>
+                <h6 style="color:#3B6182"><a href="mailto:info@pradhanitservices.com">info@pradhanitservices.com</a></h6>
               </div>
               <div class="single-contact">
                 <div class="contact-icon">
                   <i class="lni-phone-handset"></i>
                 </div>
-                <h6 style="color:#3B6182"><b>Phone :-</b><a href="tel:+91 9835309230"> +91-9835309230</a></h6>
+                <h6 style="color:#3B6182"><a href="tel:+91 9835309230"> +91-9835309230</a></h6>
               </div>
             </div>
           </div>
