--- a/index.html
+++ b/index.html
@@ -635,21 +635,27 @@
 
         <div class="col-lg-4 col-md-3 col-xs-12">
           <div>
-            <h4>Contact Us</h4>
-            <h6 style="color:#3B6182"><b>ADDRESS :-</b></h6>
-            <h6>3rd floor, Anjir Niwas, Kumhrar, Patna, 800026</h6>
-            <ul>
-              <li>
-                <h6 style="color:#3B6182"><b>Phone :-</b></h6>
-              <li>
-                <h6><a href="tel:+91 9835309230"> +91-9835309230</a></h6>
-              </li>
-              <li>
-                <h6 style="color:#3B6182"><b>Email :-</b></h6>
-              <li>
-                <h6><a href="mailto:info@pradhanitservices.com">info@pradhanitservices.com</a></h6>
-              </li>
-            </ul>
+             <h2>Contact Us</h2>
+            <div class="contact-right">
+              <div class="single-contact">
+                <div class="contact-icon">
+                  <i class="lni-map-marker"></i>
+                </div>
+                <p style="color:#3B6182"> 3rd floor, Anjir Niwas, Kumhrar, Patna, 800026</p>
+              </div>
+              <div class="single-contact">
+                <div class="contact-icon">
+                  <i class="lni-envelope"></i>
+                </div>
+                <h6 style="color:#3B6182"><a href="mailto:info@pradhanitservices.com">info@pradhanitservices.com</a></h6>
+              </div>
+              <div class="single-contact">
+                <div class="contact-icon">
+                  <i class="lni-phone-handset"></i>
+                </div>
+                <h6 style="color:#3B6182"><a href="tel:+91 9835309230"> +91-9835309230</a></h6>
+              </div>
+            </div>
           </div>
         </div>
         <div class="col-lg-4 col-md-3 col-xs-12">
