--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
                 <div class="contact-icon">
                   <i class="lni-map-marker"></i>
                 </div>
-                <p style="color:#3B6182"> 3rd floor, Anjir Niwas, Kumhrar, Patna, 800026</p>
+                <h6 style="color:#3B6182"> 3rd floor, Anjir Niwas, Kumhrar, Patna, 800026</h6>
               </div>
               <div class="single-contact">
                 <div class="contact-icon">
@@ -658,6 +658,7 @@
             </div>
           </div>
         </div>
+      </div>
         <div class="col-lg-4 col-md-3 col-xs-12">
           <div>
             <h4>Services</h4>
