--- a/index.html
+++ b/index.html
@@ -64,16 +64,15 @@
   <!-- Global site tag - Google Search Console -->
   <meta name="google-site-verification" content="r8a8UUs9fJEF4e8xZJ5jNzn2JMAHftyXL3MiPsB2k-8" />
                                                                                              
-   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-S8CSCP0T36"></script>
+ <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-192955325-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-S8CSCP0T36');
-</script>                                                                                          
-
+  gtag('config', 'UA-192955325-1');
+</script>
   <script>(function (w, d) { w.CollectId = "60314eb3e9cf8d150b3ac536"; var h = d.head || d.getElementsByTagName("head")[0]; var s = d.createElement("script"); s.setAttribute("type", "text/javascript"); s.async = true; s.setAttribute("src", "https://collectcdn.com/launcher.js"); h.appendChild(s); })(window, document);</script>
 </head>
 
