--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
                 </div>
               </div>
             </div>
-           <!-- <div class="item">
+           <div class="item">
               <div class="testimonial-item">
                 <div class="img-thumb">
                   <img src="assets/img/testimonial/dreamcountrylogo.png" alt="dreamcountry logo">
@@ -498,7 +498,7 @@
                     interested to develop a website for their business, increase website traffic and ROI of business.</p>
                 </div>
               </div>
-            </div> -->
+            </div>
           </div>
         </div>
       </div>
