--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#blog">
+              <a class="nav-link" href="https://pradhanitservices.wordpress.com/blog/">
                 Blog
               </a>
             </li>
