--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
   <!-- Required meta tags -->
-  <title>Best Digital Marketing and Website Development Agency in Patna, India </title>
+  <title>Best Digital Marketing & Web Development Agency in Patna, India </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Pradhan iT Services are giving the best services of Digital Marketing, SEO, SMM, PPC, Content Marketing, Ecommerce Branding, Website Designing, Website Development in Patna, India. we have the supreme team  of IT solution.">
