--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="author" content="pradhanitservices.com">
   <meta name="distribution" content="global">
 
-  <meta property="og:title" content="Best Digital Marketing and Website Development Agency in Patna, India" />
+  <meta property="og:title" content="Best Digital Marketing & Web Development Agency in Patna, India" />
   <meta property="og:description" content="Pradhan iT Services are giving the best services of Digital Marketing, SEO, SMM, PPC, Content Marketing, Ecommerce Branding, Website Designing, Website Development in Patna, India. we have the supreme team  of IT solution." />
   <meta property="og:url" content="https://pradhanitservices.com/" />
   <meta property="og:image" content="https://pradhanitservices.files.wordpress.com/2021/05/page-header-bg.jpg" />
@@ -23,7 +23,7 @@
 
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@PradhanServices" />
-  <meta name="twitter:title" content="Best Digital Marketing and Website Development Agency in Patna, India" />
+  <meta name="twitter:title" content="Best Digital Marketing & Web Development Agency in Patna, India" />
   <meta name="twitter:description" content="Pradhan iT Services are giving the best serivces of Digital Marketing, SEO, SMM, PPC, Content Marketing, Ecommerce Branding, Website Designing, Website Development in Patna, India. we have the supreme team  of IT solution." />
   <meta name="twitter:image" content="https://pradhanitservices.files.wordpress.com/2021/05/page-header-bg.jpg" />
   <!-- Favicon -->
