--- a/index.html
+++ b/index.html
@@ -77,6 +77,15 @@
 </script>
   <script>(function (w, d) { w.CollectId = "60314eb3e9cf8d150b3ac536"; var h = d.head || d.getElementsByTagName("head")[0]; var s = d.createElement("script"); s.setAttribute("type", "text/javascript"); s.async = true; s.setAttribute("src", "https://collectcdn.com/launcher.js"); h.appendChild(s); })(window, document);</script>
 
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NK1W28JHL2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-NK1W28JHL2');
+</script>
   </head>
 
 <body>
